# zkevm-benchmark-workload

./: .gitignore  Cargo.toml  README-profiling.md  benchmark_results.md  comparison-report.md  detailed_comparison_risc0_sp1_1M.csv
benchmark-results/: README.md  benchmart-results.md
benchmark-results/markdown-reports/latest/: README.md
benchmark-results/markdown-reports/statistics/: README.md
crates/benchmark-runner/: Cargo.toml
crates/benchmark-runner/src/: lib.rs  runner.rs  stateless_executor.rs  stateless_validator.rs
crates/benchmark-runner/src/stateless_executor/: ethrex.rs  reth.rs
crates/benchmark-runner/src/stateless_validator/: ethrex.rs
crates/ere-hosts/src/: cli.rs  main.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: lib.rs
crates/witness-generator/: Cargo.toml
crates/witness-generator-cli/src/: main.rs
crates/witness-generator/src/: eest_generator.rs  lib.rs  rpc_generator.rs  tracing.rs
docs/: SP1_CLUSTER_BENCHMARK.md
ere-guests/: Cargo.toml
ere-guests/empty-program/sp1-cluster/: Cargo.toml
ere-guests/empty-program/sp1-cluster/src/: main.rs
ere-guests/risc0/: ere_guest_info.json
ere-guests/risc0/guest/src/: main.rs
ere-guests/sp1/src/: main.rs
ere-guests/stateless-executor/ethrex/guest/: Cargo.toml
ere-guests/stateless-executor/ethrex/guest/src/: guest.rs  lib.rs
ere-guests/stateless-executor/ethrex/risc0/: Cargo.toml
ere-guests/stateless-executor/ethrex/risc0/src/: main.rs
ere-guests/stateless-executor/ethrex/sp1/: Cargo.toml
ere-guests/stateless-executor/ethrex/sp1/src/: main.rs
ere-guests/stateless-executor/reth/airbender/: Cargo.toml
ere-guests/stateless-executor/reth/airbender/src/: main.rs
ere-guests/stateless-executor/reth/guest/: Cargo.toml
ere-guests/stateless-executor/reth/guest/src/: guest.rs
ere-guests/stateless-executor/reth/io/: Cargo.toml
ere-guests/stateless-executor/reth/openvm/: Cargo.toml
ere-guests/stateless-executor/reth/openvm/src/: main.rs
ere-guests/stateless-executor/reth/pico/: Cargo.toml
ere-guests/stateless-executor/reth/pico/src/: main.rs
ere-guests/stateless-executor/reth/risc0/: Cargo.toml
ere-guests/stateless-executor/reth/risc0/src/: main.rs
ere-guests/stateless-executor/reth/sp1/: Cargo.toml
ere-guests/stateless-executor/reth/sp1-cluster/: Cargo.toml
ere-guests/stateless-executor/reth/sp1-cluster/src/: main.rs
ere-guests/stateless-executor/reth/sp1/src/: main.rs
ere-guests/stateless-executor/reth/zisk/: Cargo.toml
ere-guests/stateless-executor/reth/zisk/src/: main.rs
ere-guests/stateless-validator/ethrex/risc0/: Cargo.toml
ere-guests/stateless-validator/ethrex/sp1/: Cargo.toml
ere-guests/stateless-validator/ethrex/zisk/: Cargo.toml
ere-guests/stateless-validator/reth/airbender/: Cargo.toml
ere-guests/stateless-validator/reth/airbender/src/: main.rs
ere-guests/stateless-validator/reth/guest/: Cargo.toml
ere-guests/stateless-validator/reth/guest/src/: guest.rs
ere-guests/stateless-validator/reth/io/: Cargo.toml
ere-guests/stateless-validator/reth/openvm/: Cargo.toml
ere-guests/stateless-validator/reth/openvm/src/: main.rs
ere-guests/stateless-validator/reth/pico/: Cargo.toml
ere-guests/stateless-validator/reth/pico/src/: main.rs
ere-guests/stateless-validator/reth/risc0/: Cargo.toml
ere-guests/stateless-validator/reth/risc0/src/: main.rs
ere-guests/stateless-validator/reth/sp1/: Cargo.toml
ere-guests/stateless-validator/reth/sp1-cluster/: Cargo.toml
ere-guests/stateless-validator/reth/sp1-cluster/src/: main.rs
ere-guests/stateless-validator/reth/sp1/src/: main.rs
ere-guests/stateless-validator/reth/zisk/: Cargo.toml
ere-guests/stateless-validator/reth/zisk/src/: main.rs
profiling-crates/: Cargo.toml  README.md
profiling-crates/profile-metrics/: Cargo.toml  README.md
profiling-crates/profile-metrics/src/: lib.rs
profiling-crates/profile-runner/: Cargo.toml
profiling-crates/profile-runner-cli/: Cargo.toml
profiling-crates/profile-runner-cli/src/: main.rs
profiling-crates/profile-runner/src/: lib.rs
profiling-crates/profile-witness-generator/: Cargo.toml  README.md
profiling-crates/profile-witness-generator/src/: json_generator.rs  lib.rs
profiling-crates/state-generator/: Cargo.toml
profiling-crates/state-serializer/: Cargo.toml
profiling-crates/state-serializer/src/: lib.rs
profiling-guests/risc0/: Cargo.toml
profiling-guests/risc0/guest/: Cargo.toml
profiling-guests/risc0/guest/src/: main.rs
scripts/: QUICK_START.md  README.md  TEST_NAME_FORMATTING.md  compare_sp1_risc0.py  download-and-extract-fixtures.sh  example-single-file-usage.md  example_usage.md  export_comparison_csv.py  export_detailed_comparison.py  export_speedup_comparison.py  generate-gas-categorized-fixture.sh  generate-gas-categorized-fixtures.sh  generate_markdown_tables.py  generate_report.py  generate_results.sh  json_to_csv.py  opcode_test_parser.py  requirements.txt  run-gas-categorized-benchmarks.sh  run-single-file-benchmark.sh  run_benchmark_and_gen_report.sh  simplify_test_names.py  test_name_formatter.py  test_name_parser.py  update-docs-with-results.sh
scripts/sp1-cluster/: docker-compose.cpu.yml  docker-compose.gpu.yml  docker-compose.yml  env.example  start-sp1-cluster.sh  stop-sp1-cluster.sh
tests/: call_types.json
tests/src/: stateless_validator.rs
www/: vocs.config.ts
www/docs/pages/: gas-categorized-benchmarks.mdx  getting-started.mdx  index.mdx  naming-scheme.mdx  scripts.mdx
www/docs/pages/benchmark-results/gas-categorized/: 1m-risc0.md  1m-sp1.md
www/docs/pages/benchmark-results/gas-categorized/1m/: 1M-summary.md  1m-risc0.md  1m-sp1.md  summary.md
