[workspace]
members = [
    "crates/metrics",
    "crates/witness-generator",
    "crates/witness-generator-cli",
    "xtask",
    # Guest programs
    "ere-guests/sp1",
    # TODO: currently have build issues and will be uncommented when fixed
    # "ere-guests/risc0",
    # "ere-guests/risc0/guest", # TODO: fix so we have one crate
    "ere-guests/openvm",
    # "ere-guests/pico", # See https://github.com/eth-act/zkevm-benchmark-workload/issues/43
    "ere-guests/zisk",
    # Ere host crate
    "crates/ere-hosts",

    # zkProfiling Guest Programs
    "profiling-guests/risc0",

    # zkProfiling Host Programs
    "profiling-crates/profile-runner", "profiling-crates/state-generator",

    # zkProfiling Crates
    "profiling-crates/profile-metrics",
    "profiling-crates/profile-witness-generator",
    "profiling-crates/profile-runner",
    "profiling-crates/profile-runner-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rust.unused_crate_dependencies = "deny"
rustdoc.all = "warn"

[workspace.lints.clippy]
# These are some of clippy's nursery (i.e., experimental) lints that we like.
# By default, nursery lints are allowed. Some of the lints below have made good
# suggestions which we fixed. The others didn't have any findings, so we can
# assume they don't have that many false positives. Let's enable them to
# prevent future problems.
borrow_as_ptr = "warn"
branches_sharing_code = "warn"
clear_with_drain = "warn"
cloned_instead_of_copied = "warn"
collection_is_never_read = "warn"
dbg_macro = "warn"
derive_partial_eq_without_eq = "warn"
doc_markdown = "warn"
empty_line_after_doc_comments = "warn"
empty_line_after_outer_attr = "warn"
enum_glob_use = "warn"
equatable_if_let = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
flat_map_option = "warn"
from_iter_instead_of_collect = "warn"
if_not_else = "warn"
if_then_some_else_none = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
iter_on_empty_collections = "warn"
iter_on_single_items = "warn"
iter_with_drain = "warn"
iter_without_into_iter = "warn"
large_stack_frames = "warn"
manual_assert = "warn"
manual_clamp = "warn"
manual_is_variant_and = "warn"
manual_string_new = "warn"
match_same_arms = "warn"
missing-const-for-fn = "warn"
mutex_integer = "warn"
naive_bytecount = "warn"
needless_bitwise_bool = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_pass_by_ref_mut = "warn"
nonstandard_macro_braces = "warn"
option_as_ref_cloned = "warn"
or_fun_call = "warn"
path_buf_push_overwrite = "warn"
read_zero_byte_vec = "warn"
result_large_err = "allow"
redundant_clone = "warn"
redundant_else = "warn"
single_char_pattern = "warn"
string_lit_as_bytes = "warn"
string_lit_chars_any = "warn"
suboptimal_flops = "warn"
suspicious_operation_groupings = "warn"
trailing_empty_array = "warn"
trait_duplication_in_bounds = "warn"
transmute_undefined_repr = "warn"
trivial_regex = "warn"
tuple_array_conversions = "warn"
type_repetition_in_bounds = "warn"
uninhabited_references = "warn"
unnecessary_self_imports = "warn"
unnecessary_struct_initialization = "warn"
unnested_or_patterns = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
use_self = "warn"
useless_let_if_seq = "warn"
while_float = "warn"
zero_sized_map_values = "warn"


[workspace.dependencies]

serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "2.0.12"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.0", features = ["full"] }
rayon = "1.7"
clap = { version = "4.0", features = ["derive"] }
risc0-zkvm = { version = "2.3.0", default-features = false, features = ["std", "client"] }
revm = "27.0.2"
hex = "0.4"
async-trait = "0.1"
sysinfo = "0.36.0" 

# local dependencies
witness-generator = { path = "crates/witness-generator" }
zkevm-metrics = { path = "crates/metrics" }
benchmark-runner = { path = "crates/benchmark-runner" }

zkvm-interface = { git = "https://github.com/eth-applied-research-group/ere", tag = "v0.0.3", package = "zkvm-interface" }
ere-sp1 = { git = "https://github.com/eth-applied-research-group/ere", tag = "v0.0.3", package = "ere-sp1" }
ere-risczero = { git = "https://github.com/eth-applied-research-group/ere", tag = "v0.0.3", package = "ere-risczero" }
ere-pico = { git = "https://github.com/eth-applied-research-group/ere", tag = "v0.0.3", package = "ere-pico" }
ere-openvm = { git = "https://github.com/eth-applied-research-group/ere", tag = "v0.0.3", package = "ere-openvm" }
ere-zisk = { git = "https://github.com/eth-applied-research-group/ere", tag = "v0.0.3", package = "ere-zisk" }

# branch is kw/zkevm-benchmark-workload-repo
# NOTE: We are using a branch of a branch that has not yet been merged into master.
ef-tests = { git = "https://github.com/kevaundray/reth", rev = "03364a836774c72f4e354de924330fee6a41be68" }
reth-ethereum-primitives = { git = "https://github.com/kevaundray/reth", rev = "03364a836774c72f4e354de924330fee6a41be68" }
reth-primitives-traits = { git = "https://github.com/kevaundray/reth", rev = "03364a836774c72f4e354de924330fee6a41be68" }
reth-stateless = { git = "https://github.com/kevaundray/reth", rev = "03364a836774c72f4e354de924330fee6a41be68" }
reth-chainspec = { git = "https://github.com/kevaundray/reth", rev = "03364a836774c72f4e354de924330fee6a41be68" }
reth-rpc-api = { git = "https://github.com/kevaundray/reth", rev = "03364a836774c72f4e354de924330fee6a41be68" }
reth-evm-ethereum = { git = "https://github.com/kevaundray/reth", rev = "03364a836774c72f4e354de924330fee6a41be68" }

# alloy
alloy-primitives = { version = "1.2.0", default-features = false }
alloy-eips = { version = "1.0.13" }
alloy-rpc-types-eth = "1.0.12"

# misc
bincode = "2.0.1"
strum = { version = "0.27.1", features = ["derive"] }
walkdir = "2.3.3"
jsonrpsee = "0.25.1"
tokio-util = "0.7.15"

[patch.crates-io]
blst = { git = "https://github.com/risc0/blst", tag = "v0.3.14-risczero.0" }
c-kzg = { git = "https://github.com/kevaundray/c-kzg-4844.git", branch = "kw/2.1.1" }
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
tiny-keccak = { git = "https://github.com/risc0/tiny-keccak", tag = "tiny-keccak/v2.0.2-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.4-risczero.1" }
p256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "p256/v0.13.2-risczero.1" }
substrate-bn = { git = "https://github.com/risc0/paritytech-bn", tag = "v0.6.0-risczero.0" }
bls12_381 = { git = "https://github.com/risc0/zkcrypto-bls12_381", tag = "bls12_381/v0.8.0-risczero.1" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
