[workspace]
members = [

    # Reth stateless executor
    "stateless-executor/reth/airbender",
    "stateless-executor/reth/guest",
    "stateless-executor/reth/openvm",
    "stateless-executor/reth/pico",
    "stateless-executor/reth/risc0",
    "stateless-executor/reth/sp1",
    "stateless-executor/reth/sp1-cluster",
    "stateless-executor/reth/zisk",



    # Reth stateless validator
    "stateless-validator/reth/guest",
    "stateless-validator/reth/airbender",
    "stateless-validator/reth/openvm",
    "stateless-validator/reth/pico",
    "stateless-validator/reth/risc0",
    "stateless-validator/reth/sp1",
    "stateless-validator/reth/sp1-cluster",
    "stateless-validator/reth/zisk",

    # Ethrex stateless validator
    "stateless-validator/ethrex/guest",

    # Ethrex stateless executor
    "stateless-executor/ethrex/guest",

    # Empty program
    "empty-program/sp1",
    "empty-program/risc0",
    "empty-program/zisk",
    "empty-program/openvm",
    "empty-program/pico",

    # Block encoding length
    "block-encoding-length/guest",
    "block-encoding-length/sp1",

    # Panic guest
    "panic-guest/sp1",
    "panic-guest/risc0",
    "panic-guest/zisk",
    "panic-guest/openvm",
    "panic-guest/pico",

    # Libs
    "libs",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rust.unused_crate_dependencies = "deny"
rustdoc.all = "warn"

[workspace.lints.clippy]
# These are some of clippy's nursery (i.e., experimental) lints that we like.
# By default, nursery lints are allowed. Some of the lints below have made good
# suggestions which we fixed. The others didn't have any findings, so we can
# assume they don't have that many false positives. Let's enable them to
# prevent future problems.
borrow_as_ptr = "warn"
branches_sharing_code = "warn"
clear_with_drain = "warn"
cloned_instead_of_copied = "warn"
collection_is_never_read = "warn"
dbg_macro = "warn"
derive_partial_eq_without_eq = "warn"
doc_markdown = "warn"
empty_line_after_doc_comments = "warn"
empty_line_after_outer_attr = "warn"
enum_glob_use = "warn"
equatable_if_let = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
flat_map_option = "warn"
from_iter_instead_of_collect = "warn"
if_not_else = "warn"
if_then_some_else_none = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
iter_on_empty_collections = "warn"
iter_on_single_items = "warn"
iter_with_drain = "warn"
iter_without_into_iter = "warn"
large_stack_frames = "warn"
manual_assert = "warn"
manual_clamp = "warn"
manual_is_variant_and = "warn"
manual_string_new = "warn"
match_same_arms = "warn"
missing-const-for-fn = "warn"
mutex_integer = "warn"
naive_bytecount = "warn"
needless_bitwise_bool = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_pass_by_ref_mut = "warn"
nonstandard_macro_braces = "warn"
option_as_ref_cloned = "warn"
or_fun_call = "warn"
path_buf_push_overwrite = "warn"
read_zero_byte_vec = "warn"
result_large_err = "allow"
redundant_clone = "warn"
redundant_else = "warn"
single_char_pattern = "warn"
string_lit_as_bytes = "warn"
string_lit_chars_any = "warn"
suboptimal_flops = "warn"
suspicious_operation_groupings = "warn"
trailing_empty_array = "warn"
trait_duplication_in_bounds = "warn"
transmute_undefined_repr = "warn"
trivial_regex = "warn"
tuple_array_conversions = "warn"
type_repetition_in_bounds = "warn"
uninhabited_references = "warn"
unnecessary_self_imports = "warn"
unnecessary_struct_initialization = "warn"
unnested_or_patterns = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
use_self = "warn"
useless_let_if_seq = "warn"
while_float = "warn"
zero_sized_map_values = "warn"

[workspace.dependencies]
# local dependencies
guest-libs = { path = "libs", default-features = false }
reth-guest = { path = "stateless-validator/reth/guest", default-features = false }
reth-executor-guest = { path = "stateless-executor/reth/guest", default-features = false }
ethrex-guest = { path = "stateless-validator/ethrex/guest", default-features = false }
ethrex-executor-guest = { path = "stateless-executor/ethrex/guest", default-features = false }
block-encoding-length-guest = { path = "block-encoding-length/guest", default-features = false }

# ere
ere-io = { git = "https://github.com/eth-applied-research-group/ere", rev = "d15c6b495d0bc42bf160ecfbb11fa7600047c821", default-features = false }
ere-platform-trait = { git = "https://github.com/eth-applied-research-group/ere", rev = "d15c6b495d0bc42bf160ecfbb11fa7600047c821" }
ere-platform-airbender = { git = "https://github.com/eth-applied-research-group/ere", rev = "d15c6b495d0bc42bf160ecfbb11fa7600047c821", default-features = false }
ere-platform-openvm = { git = "https://github.com/eth-applied-research-group/ere", rev = "d15c6b495d0bc42bf160ecfbb11fa7600047c821", default-features = false }
ere-platform-pico = { git = "https://github.com/eth-applied-research-group/ere", rev = "d15c6b495d0bc42bf160ecfbb11fa7600047c821", default-features = false }
ere-platform-risc0 = { git = "https://github.com/eth-applied-research-group/ere", rev = "d15c6b495d0bc42bf160ecfbb11fa7600047c821", default-features = false }
ere-platform-sp1 = { git = "https://github.com/eth-applied-research-group/ere", rev = "d15c6b495d0bc42bf160ecfbb11fa7600047c821", default-features = false }
ere-platform-zisk = { git = "https://github.com/eth-applied-research-group/ere", rev = "d15c6b495d0bc42bf160ecfbb11fa7600047c821", default-features = false }

# openvm
openvm = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.2" }
openvm-ecc-guest = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.2", default-features = false }
openvm-sha2 = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.2", default-features = false }
openvm-algebra-guest = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.2", default-features = false }
openvm-keccak256 = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.2", default-features = false }
openvm-revm-crypto = { git = "https://github.com/axiom-crypto/openvm-reth-benchmark.git", branch = "openvm-v1.4.1-reth-1.8.3", default-features = false }

reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "cfde951976bfa9100a6d9f806e06fb539ae25241", default-features = false }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", rev = "cfde951976bfa9100a6d9f806e06fb539ae25241", default-features = false }
reth-stateless = { git = "https://github.com/paradigmxyz/reth", rev = "cfde951976bfa9100a6d9f806e06fb539ae25241", default-features = false }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", rev = "cfde951976bfa9100a6d9f806e06fb539ae25241", default-features = false }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "cfde951976bfa9100a6d9f806e06fb539ae25241", default-features = false }
reth-errors = { git = "https://github.com/paradigmxyz/reth", rev = "cfde951976bfa9100a6d9f806e06fb539ae25241", default-features = false }
reth-trie-common = { git = "https://github.com/paradigmxyz/reth", rev = "cfde951976bfa9100a6d9f806e06fb539ae25241", default-features = false }

# alloy
alloy-primitives = { version = "1.4.1", default-features = false }
alloy-consensus = { version = "1.1.2", default-features = false }
alloy-eips = { version = "1.1.2", default-features = false }
alloy-hardforks = { version = "0.4.5", default-features = false }
alloy-chains = { version = "0.2.5", default-features = false }
alloy-rlp = { version = "0.3.10", default-features = false }
alloy-trie = { version = "0.9.1", default-features = false }

# revm
revm = { version = "33.1.0", default-features = false }
revm-bytecode = { version = "7.1.1", default-features = false }

# ethrex
ethrex-guest-program = { git = "https://github.com/lambdaclass/ethrex.git", rev = "c68e76d6b569c60a667a1240a91e637bf2ea0d0b", package = "guest_program" }
ethrex-common = { git = "https://github.com/lambdaclass/ethrex.git", rev = "c68e76d6b569c60a667a1240a91e637bf2ea0d0b", default-features = false }

# misc
bincode = "1.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
sha2 = { version = "0.10.9", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = { version = "*", default-features = false }
serde_with = { version = "3", default-features = false }
thiserror = { version = "2.0.0", default-features = false }
anyhow = { version = "1.0", default-features = false }
once_cell = { version = "1.21", default-features = false }
rkyv = "0.8.10"

ethereum_ssz_derive = "0.9"
ethereum_ssz = "0.9"

k256 = { version = "0.13", default-features = false, features = [
    "ecdsa",
    "serde",
    "pem",
] }
sparsestate = { git = "https://github.com/eth-act/zkvm-ethereum-mpt.git", tag = "v0.4.0" }

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[profile.release.package.reth-airbender-stateless-validator]
opt-level = "s"

[profile.release.package.reth-airbender-stateless-executor]
opt-level = "s"

[patch."https://github.com/openvm-org/openvm.git"]
openvm-ecc-guest = { git = "https://github.com/openvm-org//openvm.git", tag = "v1.4.2" }
openvm-sha2 = { git = "https://github.com/openvm-org//openvm.git", tag = "v1.4.2" }
openvm-pairing = { git = "https://github.com/openvm-org//openvm.git", tag = "v1.4.2" }
openvm-k256 = { git = "https://github.com/openvm-org//openvm.git", tag = "v1.4.2", package = "k256" }
openvm-p256 = { git = "https://github.com/openvm-org//openvm.git", tag = "v1.4.2", package = "p256" }
openvm = { git = "https://github.com/openvm-org//openvm.git", tag = "v1.4.2" }
openvm-algebra-guest = { git = "https://github.com/openvm-org//openvm.git", tag = "v1.4.2" }
openvm-keccak256 = { git = "https://github.com/openvm-org//openvm.git", tag = "v1.4.2" }

[patch."https://github.com/eth-applied-research-group/ere"]
ere-io = { path = "../../ere/crates/io" }
ere-platform-trait = { path = "../../ere/crates/zkvm-interface/platform" }
ere-platform-airbender = { path = "../../ere/crates/zkvm/airbender/platform" }
ere-platform-openvm = { path = "../../ere/crates/zkvm/openvm/platform" }
ere-platform-pico = { path = "../../ere/crates/zkvm/pico/platform" }
ere-platform-risc0 = { path = "../../ere/crates/zkvm/risc0/platform" }
ere-platform-sp1 = { path = "../../ere/crates/zkvm/sp1/platform" }
ere-platform-zisk = { path = "../../ere/crates/zkvm/zisk/platform" }

[patch."https://github.com/paradigmxyz/reth"]
reth-stateless = { git = "https://github.com/WiseMrMusa/reth", rev = "65f85601ef1dbc1dbaf6edce43937eebe122542c" }
reth-errors = { git = "https://github.com/WiseMrMusa/reth", rev = "65f85601ef1dbc1dbaf6edce43937eebe122542c" }
reth-trie-common = { git = "https://github.com/WiseMrMusa/reth", rev = "65f85601ef1dbc1dbaf6edce43937eebe122542c" }
reth-revm = { git = "https://github.com/WiseMrMusa/reth", rev = "65f85601ef1dbc1dbaf6edce43937eebe122542c" }
reth-trie-sparse = { git = "https://github.com/WiseMrMusa/reth", rev = "65f85601ef1dbc1dbaf6edce43937eebe122542c" }
reth-ethereum-primitives = { git = "https://github.com/WiseMrMusa/reth", rev = "65f85601ef1dbc1dbaf6edce43937eebe122542c" }
reth-primitives-traits = { git = "https://github.com/WiseMrMusa/reth", rev = "65f85601ef1dbc1dbaf6edce43937eebe122542c" }
reth-chainspec = { git = "https://github.com/WiseMrMusa/reth", rev = "65f85601ef1dbc1dbaf6edce43937eebe122542c" }
reth-evm-ethereum = { git = "https://github.com/WiseMrMusa/reth", rev = "65f85601ef1dbc1dbaf6edce43937eebe122542c" }
reth-consensus = { git = "https://github.com/WiseMrMusa/reth", rev = "65f85601ef1dbc1dbaf6edce43937eebe122542c" }
reth-ethereum-consensus = { git = "https://github.com/WiseMrMusa/reth", rev = "65f85601ef1dbc1dbaf6edce43937eebe122542c" }
reth-evm = { git = "https://github.com/WiseMrMusa/reth", rev = "65f85601ef1dbc1dbaf6edce43937eebe122542c" }

[patch.crates-io]
sha2-v0-10-9 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.9-sp1-4.0.0" }
sha3-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha3", tag = "patch-sha3-0.10.8-sp1-4.0.0" }
crypto-bigint = { git = "https://github.com/sp1-patches/RustCrypto-bigint", tag = "patch-0.5.5-sp1-4.0.0" }
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", tag = "patch-2.0.2-sp1-4.0.0" }
curve25519-dalek = { git = "https://github.com/sp1-patches/curve25519-dalek", tag = "patch-4.1.3-sp1-5.0.0" }
k256 = { git = "https://github.com/sp1-patches/elliptic-curves", tag = "patch-k256-13.4-sp1-5.0.0" }
p256 = { git = "https://github.com/sp1-patches/elliptic-curves", tag = "patch-p256-13.2-sp1-5.0.0" }
substrate-bn = { git = "https://github.com/sp1-patches/bn", tag = "patch-0.6.0-sp1-5.0.0" }
ecdsa = { git = "https://github.com/sp1-patches/signatures", tag = "patch-16.9-sp1-4.1.0" }
