[package]
name = "profile-witness-generator"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
revm.workspace = true
hex.workspace = true
async-trait.workspace = true
anyhow.workspace = true
tracing.workspace = true 