[package]
name = "state-serializer"
version = "0.1.0"
edition = "2021"

[dependencies]
revm = { version = "27.0.2", default-features = false, features = ["std", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
alloy-primitives = { version = "1.2.1" }
profile-witness-generator = { path = "../profile-witness-generator" }
