[package]
name = "profile"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "2.3.0", default-features = false, features = ['std', 'unstable', 'getrandom'] }
c-kzg = { version = "=2.1.1", features = ["risc0-ffi"] }


# RISC0 dependencies
getrandom = { version = "0.3.0" }

# revm - use working version that matches ere-guests
revm = { version = "27.0.3", features = ["std"] }

# json parsing
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }

# alloy for hex parsing
alloy-primitives = { version = "1.2.1" }

# state serialization
state-serializer = { path = "../../../profiling-crates/state-serializer" }

# zkgas profiling


[patch.crates-io]
c-kzg = { git = "https://github.com/risc0/c-kzg-4844.git", branch = "p2.1.1" }