[package]
name = "reth-executor-guest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
guest-libs.workspace = true
sparsestate.workspace = true
ere-io.workspace = true
ere-platform-trait.workspace = true

# reth
reth-primitives-traits.workspace = true
reth-ethereum-primitives = { workspace = true, features = [
    "serde",
    "serde-bincode-compat",
] }
reth-chainspec.workspace = true
reth-stateless.workspace = true
reth-evm-ethereum.workspace = true

# alloy
alloy-primitives.workspace = true

# external
serde.workspace = true
once_cell.workspace = true

[features]
default = ["std", "reth-stateless/default"]
std = ["guest-libs/std", "once_cell/std"]
